tests/compile_fail/no_field.stderr
error[E0026]: struct `Foo` does not have a field named `foo`
  --> $DIR/no_field.rs:10:24
   |
10 |     project!(Foo, cell.foo)
   |                        ^^^ struct `Foo` does not have this field
